# Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  score.cpp  score.h
